tests/common/snapshots/program_store__common__tests__program_store.rs-7-5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: 118
  success: true
  extractor: program_store_built_in
  do_not_recurse: false
  output_directory: "[output_directory]"
